lookout/style/format/benchmarks/reports/0.2.0/quality/atom-train_report.md
# Train report for javascript / file:///tmp/top-repos-quality-repos-kt18vk3f/atom HEAD 108b23210759a8c5b2f51ac99659be5dc31a7371

### Classification report

PPCR: 0.941

| Class | Precision | Recall | Full Recall | F1-score | Full F1-score | Support | Full Support | PPCR |
|------:|:----------|:-------|:------------|:---------|:---------|:--------|:-------------|:-----|
| `∅` | 0.977| 0.997| 0.987| 0.987| 0.982| 250916| 253410| 0.990 |
| `␣` | 0.957| 0.941| 0.914| 0.949| 0.935| 92094| 94865| 0.971 |
| `'` | 0.992| 1.000| 0.996| 0.996| 0.994| 42691| 42883| 0.996 |
| `⏎` | 0.957| 0.863| 0.380| 0.908| 0.544| 11929| 27076| 0.441 |
| `⏎␣⁺␣⁺` | 0.950| 0.905| 0.840| 0.927| 0.891| 11301| 12176| 0.928 |
| `⏎␣⁻␣⁻` | 0.928| 0.889| 0.804| 0.908| 0.862| 10722| 11853| 0.905 |
| `⏎⏎` | 0.918| 0.713| 0.428| 0.803| 0.584| 5937| 9889| 0.600 |
| `"` | 1.000| 0.121| 0.121| 0.216| 0.216| 396| 396| 1.000 |
| `⏎␣⁻␣⁻␣⁻␣⁻` | 0.000| 0.000| 0.000| 0.000| 0.000| 116| 125| 0.928 |
| `⏎⏎␣⁻␣⁻` | 0.000| 0.000| 0.000| 0.000| 0.000| 13| 39| 0.333 |
| `micro avg` | 0.971| 0.971| 0.914| 0.971| 0.942| 426115| 452712| 0.941 |
| `macro avg` | 0.768| 0.643| 0.547| 0.669| 0.601| 426115| 452712| 0.941 |
| `weighted avg` | 0.970| 0.971| 0.914| 0.970| 0.932| 426115| 452712| 0.941 |

### Confusion matrix

|refusal|  ∅| '| ␣| ⏎| ⏎␣⁺␣⁺| ⏎␣⁻␣⁻| ⏎⏎| "| ⏎␣⁻␣⁻␣⁻␣⁻| ⏎⏎␣⁻␣⁻| 
|:---|:---|:---|:---|:---|:---|:---|:---|:---|:---|:---|
|0 |0 |0 |0 |0 |0 |0 |0 |0 |0 |0 |
|2494 |250087 |0 |480 |1 |44 |274 |30 |0 |0 |0 |
|192 |0 |42691 |0 |0 |0 |0 |0 |0 |0 |0 |
|2771 |4183 |0 |86695 |344 |485 |370 |17 |0 |0 |0 |
|15147 |207 |0 |1087 |10300 |0 |8 |327 |0 |0 |0 |
|875 |514 |0 |549 |15 |10222 |0 |1 |0 |0 |0 |
|1131 |904 |0 |259 |15 |9 |9534 |1 |0 |0 |0 |
|3952 |105 |0 |1511 |85 |0 |0 |4236 |0 |0 |0 |
|0 |0 |348 |0 |0 |0 |0 |0 |48 |0 |0 |
|9 |29 |0 |4 |1 |0 |82 |0 |0 |0 |0 |
|26 |0 |0 |10 |0 |0 |1 |2 |0 |0 |0 |

### Files with most errors

| filename | number of errors|
|:----:|:-----|
| src/text-editor.js | 1212 |
| spec/text-editor-spec.js | 482 |
| spec/tree-sitter-language-mode-spec.js | 399 |
| src/workspace.js | 399 |
| spec/workspace-spec.js | 316 |
| src/config.js | 281 |
| src/main-process/atom-application.js | 270 |
| src/pane.js | 262 |
| src/tree-sitter-language-mode.js | 260 |
| src/dock.js | 251 |

<details>
    <summary>Machine-readable report</summary>
```json
{
  "cl_report": {"\"": {"f1-score": 0.21621621621621626, "precision": 1.0, "recall": 0.12121212121212122, "support": 396}, "\u0027": {"f1-score": 0.9959407441968973, "precision": 0.9919143102767257, "recall": 1.0, "support": 42691}, "macro avg": {"f1-score": 0.6693838316046218, "precision": 0.7679318164200034, "recall": 0.6429938537791253, "support": 426115}, "micro avg": {"f1-score": 0.9711298593102801, "precision": 0.9711298593102801, "recall": 0.9711298593102801, "support": 426115}, "weighted avg": {"f1-score": 0.9701233477537052, "precision": 0.9704494123313189, "recall": 0.9711298593102801, "support": 426115}, "\u2205": {"f1-score": 0.9866435214865518, "precision": 0.9767916915661897, "recall": 0.9966961054695596, "support": 250916}, "\u23ce": {"f1-score": 0.9078889378580872, "precision": 0.9571601152309265, "recall": 0.8634420320228016, "support": 11929}, "\u23ce\u23ce": {"f1-score": 0.802957065680978, "precision": 0.918075422626788, "recall": 0.7134916624557858, "support": 5937}, "\u23ce\u23ce\u2423\u207b\u2423\u207b": {"f1-score": 0.0, "precision": 0.0, "recall": 0.0, "support": 13}, "\u23ce\u2423\u207a\u2423\u207a": {"f1-score": 0.9267032319477811, "precision": 0.95, "recall": 0.9045217237412618, "support": 11301}, "\u23ce\u2423\u207b\u2423\u207b": {"f1-score": 0.9083893097041589, "precision": 0.9284253578732107, "recall": 0.889199776161164, "support": 10722}, "\u23ce\u2423\u207b\u2423\u207b\u2423\u207b\u2423\u207b": {"f1-score": 0.0, "precision": 0.0, "recall": 0.0, "support": 116}, "\u2423": {"f1-score": 0.9490992889555474, "precision": 0.9569512666261935, "recall": 0.94137511672856, "support": 92094}},
  "cl_report_full": {"\"": {"f1-score": 0.21621621621621626, "precision": 1.0, "recall": 0.12121212121212122, "support": 396}, "\u0027": {"f1-score": 0.9937152300924094, "precision": 0.9919143102767257, "recall": 0.9955227013035468, "support": 42883}, "macro avg": {"f1-score": 0.6008556210179161, "precision": 0.7679318164200034, "recall": 0.5470138430875404, "support": 452712}, "micro avg": {"f1-score": 0.9417393867052333, "precision": 0.9711298593102801, "recall": 0.9140756154022867, "support": 452712}, "weighted avg": {"f1-score": 0.9316722324557264, "precision": 0.9692894527582634, "recall": 0.9140756154022867, "support": 452712}, "\u2205": {"f1-score": 0.9818133279941268, "precision": 0.9767916915661897, "recall": 0.986886863186141, "support": 253410}, "\u23ce": {"f1-score": 0.5444406268995956, "precision": 0.9571601152309265, "recall": 0.38041069581917564, "support": 27076}, "\u23ce\u23ce": {"f1-score": 0.5841550024132938, "precision": 0.918075422626788, "recall": 0.42835473758721815, "support": 9889}, "\u23ce\u23ce\u2423\u207b\u2423\u207b": {"f1-score": 0.0, "precision": 0.0, "recall": 0.0, "support": 39}, "\u23ce\u2423\u207a\u2423\u207a": {"f1-score": 0.8913498430415069, "precision": 0.95, "recall": 0.8395203679369251, "support": 12176}, "\u23ce\u2423\u207b\u2423\u207b": {"f1-score": 0.8619473826959588, "precision": 0.9284253578732107, "recall": 0.8043533282713237, "support": 11853}, "\u23ce\u2423\u207b\u2423\u207b\u2423\u207b\u2423\u207b": {"f1-score": 0.0, "precision": 0.0, "recall": 0.0, "support": 125}, "\u2423": {"f1-score": 0.9349185808260541, "precision": 0.9569512666261935, "recall": 0.9138776155589522, "support": 94865}},
  "ppcr": 0.941249624485324
}
```
</details>
