lookout/style/format/benchmarks/reports/0.3.0/quality/atom-train_report.md
# Train report for javascript / file:///tmp/top-repos-quality-repos-agu98snj/atom HEAD 108b23210759a8c5b2f51ac99659be5dc31a7371

### Classification report

PPCR: 0.775

| Class | Precision | Recall | Full Recall | F1-score | Full F1-score | Support | Full Support | PPCR |
|------:|:----------|:-------|:------------|:---------|:---------|:--------|:-------------|:-----|
| `∅` | 0.987| 0.994| 0.608| 0.990| 0.752| 155183| 253825| 0.611 |
| `'` | 0.997| 1.000| 0.996| 0.999| 0.997| 136086| 136679| 0.996 |
| `␣` | 0.981| 0.979| 0.919| 0.980| 0.949| 89198| 95033| 0.939 |
| `⏎` | 0.998| 0.978| 0.730| 0.988| 0.844| 55457| 74252| 0.747 |
| `⏎␣⁺␣⁺` | 0.952| 0.954| 0.842| 0.953| 0.894| 10792| 12229| 0.882 |
| `⏎␣⁻␣⁻` | 0.940| 0.957| 0.773| 0.949| 0.848| 9636| 11943| 0.807 |
| `⏎⏎` | 0.979| 0.982| 0.366| 0.981| 0.532| 3764| 10112| 0.372 |
| `"` | 0.000| 0.000| 0.000| 0.000| 0.000| 344| 371| 0.927 |
| `⏎␣⁻␣⁻␣⁻␣⁻` | 0.000| 0.000| 0.000| 0.000| 0.000| 83| 126| 0.659 |
| `weighted avg` | 0.987| 0.988| 0.765| 0.988| 0.852| 460543| 594570| 0.775 |
| `macro avg` | 0.759| 0.761| 0.581| 0.760| 0.646| 460543| 594570| 0.775 |
| `micro avg` | 0.988| 0.988| 0.765| 0.988| 0.863| 460543| 594570| 0.775 |

### Confusion matrix

|refusal|  ∅| '| ␣| ⏎| ⏎␣⁺␣⁺| ⏎␣⁻␣⁻| ⏎⏎| "| ⏎␣⁻␣⁻␣⁻␣⁻| 
|:---|:---|:---|:---|:---|:---|:---|:---|:---|:---|
|0 |0 |0 |0 |0 |0 |0 |0 |0 |0 |
|98642 |154253 |0 |680 |0 |22 |228 |0 |0 |0 |
|593 |0 |136086 |0 |0 |0 |0 |0 |0 |0 |
|5835 |1094 |0 |87317 |22 |485 |278 |2 |0 |0 |
|18795 |339 |0 |797 |54236 |0 |8 |77 |0 |0 |
|1437 |276 |0 |202 |15 |10299 |0 |0 |0 |0 |
|2307 |372 |0 |28 |0 |10 |9226 |0 |0 |0 |
|6348 |2 |0 |14 |52 |0 |0 |3696 |0 |0 |
|27 |0 |344 |0 |0 |0 |0 |0 |0 |0 |
|43 |6 |0 |0 |0 |0 |77 |0 |0 |0 |

### Files with most errors

| filename | number of errors|
|:----:|:-----|
| src/text-editor.js | 371 |
| spec/tree-sitter-language-mode-spec.js | 182 |
| src/deprecated-syntax-selectors.js | 176 |
| spec/text-editor-spec.js | 146 |
| spec/workspace-spec.js | 143 |
| spec/menu-sort-helpers-spec.js | 136 |
| src/workspace.js | 132 |
| spec/pane-spec.js | 130 |
| src/main-process/atom-application.js | 126 |
| src/config.js | 121 |

<details>
    <summary>Machine-readable report</summary>
```json
{
  "cl_report": {"\"": {"f1-score": 0.0, "precision": 0.0, "recall": 0.0, "support": 344}, "\u0027": {"f1-score": 0.9987376887962542, "precision": 0.9974785604339221, "recall": 1.0, "support": 136086}, "macro avg": {"f1-score": 0.7599118710017342, "precision": 0.7593579238190389, "recall": 0.7605117167833727, "support": 460543}, "micro avg": {"f1-score": 0.988209570007578, "precision": 0.988209570007578, "recall": 0.988209570007578, "support": 460543}, "weighted avg": {"f1-score": 0.9877520393235745, "precision": 0.9873338219517885, "recall": 0.988209570007578, "support": 460543}, "\u2205": {"f1-score": 0.990308963967579, "precision": 0.9866382673881618, "recall": 0.9940070755172925, "support": 155183}, "\u23ce": {"f1-score": 0.9880672605709496, "precision": 0.998361711919006, "recall": 0.9779829417386443, "support": 55457}, "\u23ce\u23ce": {"f1-score": 0.9805013927576602, "precision": 0.9790728476821192, "recall": 0.9819341126461212, "support": 3764}, "\u23ce\u2423\u207a\u2423\u207a": {"f1-score": 0.953258052573121, "precision": 0.9522004437869822, "recall": 0.9543180133432172, "support": 10792}, "\u23ce\u2423\u207b\u2423\u207b": {"f1-score": 0.9485426412378554, "precision": 0.9397983090557197, "recall": 0.9574512245745123, "support": 9636}, "\u23ce\u2423\u207b\u2423\u207b\u2423\u207b\u2423\u207b": {"f1-score": 0.0, "precision": 0.0, "recall": 0.0, "support": 83}, "\u2423": {"f1-score": 0.9797908391121882, "precision": 0.9806711741054381, "recall": 0.9789120832305657, "support": 89198}},
  "cl_report_full": {"\"": {"f1-score": 0.0, "precision": 0.0, "recall": 0.0, "support": 371}, "\u0027": {"f1-score": 0.9965691354001516, "precision": 0.9974785604339221, "recall": 0.9956613671449162, "support": 136679}, "macro avg": {"f1-score": 0.6461303893408923, "precision": 0.7593579238190389, "recall": 0.5814223863041755, "support": 594570}, "micro avg": {"f1-score": 0.8626810588060236, "precision": 0.988209570007578, "recall": 0.7654489799350791, "support": 594570}, "weighted avg": {"f1-score": 0.851651949381358, "precision": 0.987037965204106, "recall": 0.7654489799350791, "support": 594570}, "\u2205": {"f1-score": 0.7521472961013441, "precision": 0.9866382673881618, "recall": 0.6077139761646804, "support": 253825}, "\u23ce": {"f1-score": 0.8436345536137878, "precision": 0.998361711919006, "recall": 0.7304315035285245, "support": 74252}, "\u23ce\u23ce": {"f1-score": 0.5322963923093541, "precision": 0.9790728476821192, "recall": 0.36550632911392406, "support": 10112}, "\u23ce\u2423\u207a\u2423\u207a": {"f1-score": 0.8938164460837491, "precision": 0.9522004437869822, "recall": 0.8421784283261101, "support": 12229}, "\u23ce\u2423\u207b\u2423\u207b": {"f1-score": 0.8479779411764706, "precision": 0.9397983090557197, "recall": 0.7725027212593151, "support": 11943}, "\u23ce\u2423\u207b\u2423\u207b\u2423\u207b\u2423\u207b": {"f1-score": 0.0, "precision": 0.0, "recall": 0.0, "support": 126}, "\u2423": {"f1-score": 0.9487317393831729, "precision": 0.9806711741054381, "recall": 0.9188071512001095, "support": 95033}},
  "ppcr": 0.7745816304219857
}
```
</details>
